--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
-  "name": "angularMaterialAdmin",
-  "version": "0.0.0",
+  "name": "angular-material-admin",
+  "description": "Material Design Angular Admin Dashboard",
+  "homepage": "https://github.com/micrum/angular-material-admin",
+  "license": "MIT",
+  "version": "0.1.0",
   "dependencies": {
     "jquery": "~2.1.1",
     "angular-animate": "~1.3.4",
