--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angularMaterialAdmin",
-  "version": "0.0.0",
+  "name": "angular-material-admin",
+  "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
     "gulp": "~3.8.10",
