add bower install post-script to npm install. closes #1

--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "scripts": {
+    "init": "npm install",
+    "install": "bower install"
   }
 }
