--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "~1.3.4",
     "angular-ui-router": "~0.2.13",
     "angular-material": "~0.8.3",
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "angular-google-chart": "~0.0.11"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
