--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-ui-router": "~0.2.13",
     "angular-material": "~0.10.0",
     "angular": "~1.3.4",
-    "angular-google-chart": "~0.0.11"
+    "angular-nvd3": "1.0.0-rc.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
