--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-sanitize": "~1.3.4",
     "angular-ui-router": "~0.2.13",
     "angular-material": "~0.10.0",
-    "angular": "~1.3.4",
+    "angular": "1.3.15",
     "angular-nvd3": "1.0.0-rc.2"
   },
   "devDependencies": {
