--- a/package.json
+++ b/package.json
@@ -3,41 +3,42 @@
   "version": "1.1.0",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "~3.9.0",
-    "gulp-autoprefixer": "~2.0.0",
-    "gulp-angular-templatecache": "~1.4.2",
+    "browser-sync": "~1.7.1",
+    "chalk": "~0.5.1",
     "del": "~0.1.3",
+    "gulp": "~3.9.0",
+    "gulp-angular-filesort": "~1.0.4",
+    "gulp-angular-templatecache": "~1.4.2",
+    "gulp-autoprefixer": "~2.0.0",
     "gulp-consolidate": "~0.1.2",
     "gulp-csso": "~0.2.9",
     "gulp-filter": "~1.0.2",
     "gulp-flatten": "~0.0.4",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-inject": "~1.0.2",
     "gulp-jshint": "~1.9.0",
+    "gulp-karma": "~0.0.4",
     "gulp-load-plugins": "~0.7.1",
+    "gulp-minify-html": "~0.1.7",
+    "gulp-ng-annotate": "~1.0.0",
+    "gulp-protractor": "~0.0.11",
+    "gulp-rename": "~1.2.0",
+    "gulp-replace": "~0.5.0",
+    "gulp-rev": "~2.0.1",
+    "gulp-rev-replace": "~0.3.1",
+    "gulp-ruby-sass": "~0.7.1",
     "gulp-size": "~1.1.0",
     "gulp-uglify": "~1.0.1",
     "gulp-useref": "~1.0.2",
-    "gulp-ng-annotate": "~1.0.0",
-    "gulp-replace": "~0.5.0",
-    "gulp-rename": "~1.2.0",
-    "gulp-rev": "~2.0.1",
-    "gulp-rev-replace": "~0.3.1",
-    "gulp-minify-html": "~0.1.7",
-    "gulp-inject": "~1.0.2",
-    "gulp-protractor": "~0.0.11",
-    "gulp-karma": "~0.0.4",
-    "gulp-ruby-sass": "~0.7.1",
-    "gulp-angular-filesort": "~1.0.4",
-    "main-bower-files": "~2.4.0",
+    "http-proxy": "~1.7.0",
     "jshint-stylish": "~1.0.0",
-    "wiredep": "~2.2.0",
     "karma-jasmine": "~0.3.1",
     "karma-phantomjs-launcher": "~0.1.4",
-    "require-dir": "~0.1.0",
-    "browser-sync": "~1.7.1",
-    "http-proxy": "~1.7.0",
-    "chalk": "~0.5.1",
+    "main-bower-files": "~2.4.0",
     "protractor": "~1.4.0",
-    "uglify-save-license": "~0.4.1"
+    "require-dir": "~0.1.0",
+    "uglify-save-license": "~0.4.1",
+    "wiredep": "~2.2.0"
   },
   "engines": {
     "node": ">=0.10.0"
