--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,20 @@
 {
-  "name": "angular-material-admin",
+  "name": "angular-material-dashboard",
   "description": "Material Design Angular Admin Dashboard",
   "homepage": "https://github.com/micrum/angular-material-admin",
   "license": "MIT",
   "version": "1.2.0",
   "dependencies": {
     "jquery": "~2.1.1",
-    "angular-animate": "~1.3.4",
-    "angular-cookies": "~1.3.4",
-    "angular-touch": "~1.3.4",
-    "angular-sanitize": "~1.3.4",
-    "angular-ui-router": "~0.2.13",
-    "angular-material": "0.10.0",
-    "angular": "1.3.15",
-    "angular-nvd3": "1.0.0-rc.2"
+    "angular-animate": "^1.5.0",
+    "angular-cookies": "^1.5.0",
+    "angular-touch": "^1.5.0",
+    "angular-sanitize": "^1.5.0",
+    "angular-ui-router": "^0.2.18",
+    "angular": "^1.5.0",
+    "angular-nvd3": "1.0.0-rc.2",
+    "angular-material": "^1.0.6",
+    "angular-mocks": "^1.5.0"
   },
-  "devDependencies": {
-    "angular-mocks": "~1.3.4"
-  },
-  "resolutions": {
-    "angular": "~1.3.4"
-  }
+  "devDependencies": {}
 }
