--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-material-admin",
-  "version": "1.2.0",
+  "name": "angular-material-dashboard",
+  "version": "1.3.0",
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "~1.7.1",
