--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular": "^1.5.0",
     "angular-nvd3": "1.0.0-rc.2",
     "angular-material": "^1.0.6",
-    "angular-mocks": "^1.5.0"
+    "angular-mocks": "^1.5.0",
+    "angular-material-data-table": "^0.10.10"
   },
   "devDependencies": {}
 }
