--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gulp-replace": "~0.5.0",
     "gulp-rev": "~2.0.1",
     "gulp-rev-replace": "~0.3.1",
-    "gulp-ruby-sass": "~0.7.1",
+    "gulp-sass": "^3.1.0",
     "gulp-size": "~1.1.0",
     "gulp-uglify": "~1.0.1",
     "gulp-useref": "~1.0.2",
