--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "gulp-uglify": "~1.0.1",
     "gulp-useref": "~1.0.2",
     "http-proxy": "~1.7.0",
+    "jasmine-core": "~2.5.2",
     "jshint-stylish": "~1.0.0",
+    "karma": "~1.5.0",
     "karma-jasmine": "~0.3.1",
     "karma-phantomjs-launcher": "~0.1.4",
     "main-bower-files": "~2.4.0",
