--- a/bower.json
+++ b/bower.json
@@ -5,17 +5,17 @@
   "license": "MIT",
   "version": "1.3.0",
   "dependencies": {
-    "jquery": "~2.1.1",
-    "angular-animate": "^1.5.0",
-    "angular-cookies": "^1.5.0",
-    "angular-touch": "^1.5.0",
-    "angular-sanitize": "^1.5.0",
-    "angular-ui-router": "^0.3.2",
-    "angular": "^1.5.0",
+    "jquery": "3.3.1",
+    "angular-animate": "1.7.5",
+    "angular-cookies": "1.7.5",
+    "angular-touch": "1.7.5",
+    "angular-sanitize": "1.7.5",
+    "angular-ui-router": "1.0.20",
+    "angular": "1.7.5",
     "angular-nvd3": "1.0.0-rc.2",
-    "angular-material": "^1.0.6",
-    "angular-mocks": "^1.5.0",
-    "angular-material-data-table": "^0.10.10"
+    "angular-material": "1.0.6",
+    "angular-mocks": "1.7.5",
+    "angular-material-data-table": "0.10.10"
   },
   "devDependencies": {}
 }
