--- a/package.json
+++ b/package.json
@@ -3,47 +3,48 @@
   "version": "1.3.0",
   "dependencies": {},
   "devDependencies": {
-    "browser-sync": "~1.7.1",
-    "chalk": "~0.5.1",
-    "del": "~0.1.3",
-    "gulp": "~3.9.0",
-    "gulp-angular-filesort": "~1.0.4",
-    "gulp-angular-templatecache": "~1.4.2",
-    "gulp-autoprefixer": "~2.0.0",
-    "gulp-consolidate": "~0.1.2",
-    "gulp-csso": "~0.2.9",
-    "gulp-filter": "~1.0.2",
-    "gulp-flatten": "~0.0.4",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-inject": "~1.0.2",
-    "gulp-jshint": "~1.9.0",
-    "gulp-karma": "~0.0.4",
-    "gulp-load-plugins": "~0.7.1",
-    "gulp-minify-html": "~0.1.7",
-    "gulp-ng-annotate": "~1.0.0",
-    "gulp-protractor": "~0.0.11",
-    "gulp-rename": "~1.2.0",
-    "gulp-replace": "~0.5.0",
-    "gulp-rev": "~2.0.1",
-    "gulp-rev-replace": "~0.3.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-size": "~1.1.0",
-    "gulp-uglify": "~1.0.1",
-    "gulp-useref": "~1.0.2",
-    "http-proxy": "~1.7.0",
-    "jasmine-core": "~2.5.2",
-    "jshint-stylish": "~1.0.0",
-    "karma": "~1.5.0",
-    "karma-jasmine": "~0.3.1",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "main-bower-files": "~2.4.0",
-    "protractor": "~1.4.0",
-    "require-dir": "~0.1.0",
-    "uglify-save-license": "~0.4.1",
-    "wiredep": "~2.2.0"
+    "browser-sync": "2.26.3",
+    "chalk": "2.4.1",
+    "del": "3.0.0",
+    "gulp": "3.9.1",
+    "gulp-angular-filesort": "1.2.1",
+    "gulp-angular-templatecache": "2.2.2",
+    "gulp-autoprefixer": "6.0.0",
+    "gulp-consolidate": "0.2.0",
+    "gulp-csso": "3.0.1",
+    "gulp-filter": "5.1.0",
+    "gulp-flatten": "0.4.0",
+    "gulp-gh-pages": "0.5.4",
+    "gulp-inject": "4.3.2",
+    "gulp-jshint": "2.1.0",
+    "gulp-karma": "0.0.5",
+    "gulp-load-plugins": "1.5.0",
+    "gulp-minify-html": "1.0.6",
+    "gulp-ng-annotate": "2.1.0",
+    "gulp-protractor": "4.1.0",
+    "gulp-rename": "1.4.0",
+    "gulp-replace": "1.0.0",
+    "gulp-rev": "8.1.1",
+    "gulp-rev-replace": "0.4.4",
+    "gulp-sass": "3.0.0",
+    "gulp-size": "3.0.0",
+    "gulp-uglify": "3.0.1",
+    "gulp-useref": "3.1.5",
+    "http-proxy": "1.17.0",
+    "jasmine-core": "3.2.1",
+    "jshint-stylish": "2.2.1",
+    "karma": "3.0.0",
+    "karma-jasmine": "1.1.2",
+    "karma-phantomjs-launcher": "1.0.4",
+    "main-bower-files": "2.13.1",
+    "protractor": "5.4.1",
+    "require-dir": "1.1.0",
+    "uglify-save-license": "0.4.1 ",
+    "wiredep": "4.0.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=6.5",
+    "npm": ">=3.10"
   },
   "scripts": {
     "init": "npm install",
